force/src/objects/Alerts_and_notification__c.object
<CustomObject>
    <fields>
        <fullName>Alert_Begins__c</fullName>
        <description>Date the alert is active</description>
        <label>Alert Begins</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alert_Description__c</fullName>
        <description>General description of the Alert and other pertinent information related to its existence</description>
        <label>Alert Description</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alert_Ends__c</fullName>
        <description>Date the alert is inactive</description>
        <label>Alert Ends</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alert_Message__c</fullName>
        <label>Alert Message</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CallTypeLogic__c</fullName>
        <label>CallTypeLogic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AND</fullName>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Type__c</fullName>
        <label>Call Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cigna</fullName>
                </value>
                <value>
                    <fullName>Metlife</fullName>
                </value>
                <value>
                    <fullName>Eyeconic</fullName>
                </value>
                <value>
                    <fullName>2020Source</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Affiliates</fullName>
                </value>
                <value>
                    <fullName>AffiliatesE</fullName>
                </value>
                <value>
                    <fullName>AffiliatesELF</fullName>
                </value>
                <value>
                    <fullName>AffiliatesLF</fullName>
                </value>
                <value>
                    <fullName>Costco</fullName>
                </value>
                <value>
                    <fullName>Luxottica</fullName>
                </value>
                <value>
                    <fullName>RetailChain</fullName>
                </value>
                <value>
                    <fullName>JC Penny</fullName>
                </value>
                <value>
                    <fullName>BCBS</fullName>
                </value>
                <value>
                    <fullName>AONExchVSP</fullName>
                </value>
                <value>
                    <fullName>Operator</fullName>
                </value>
                <value>
                    <fullName>BankofAmerica</fullName>
                </value>
                <value>
                    <fullName>Canada Provider</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Cigna Spanish</fullName>
                </value>
                <value>
                    <fullName>Cigna VNSP</fullName>
                </value>
                <value>
                    <fullName>DragonAllOther</fullName>
                </value>
                <value>
                    <fullName>DragonExistOrder</fullName>
                </value>
                <value>
                    <fullName>CIGNAVision</fullName>
                </value>
                <value>
                    <fullName>DragonNewOrder</fullName>
                </value>
                <value>
                    <fullName>EyeconicDr</fullName>
                </value>
                <value>
                    <fullName>EyeconicTxfr</fullName>
                </value>
                <value>
                    <fullName>Dental &amp; Vision Savings Plan</fullName>
                </value>
                <value>
                    <fullName>Consult</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseIds__c</fullName>
        <description>To keep all case ids for which this alert record is not visible</description>
        <label>CaseIds</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ClientIdLogic__c</fullName>
        <label>ClientIdLogic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AND</fullName>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consumer__c</fullName>
        <label>Consumer</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PrimaryMember</fullName>
                </value>
                <value>
                    <fullName>Dependent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MemberStatusLogic__c</fullName>
        <label>MemberStatusLogic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AND</fullName>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_Status__c</fullName>
        <label>Member Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Termed</fullName>
                </value>
                <value>
                    <fullName>Pended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>High</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Low</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>(&quot;New&quot;)</defaultValue>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Alert</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Alert_Message__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Alert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alerts</pluralLabel>
    <recordTypes>
        <fullName>Alerts</fullName>
        <active>true</active>
        <label>Alerts</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>